# demos

./: conf.py
_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/.doctrees/docs/: faker_demo.doctree  faker_demo.tests.doctree  index.doctree  modules.doctree
_build/.doctrees/faker/: README.doctree
_build/.doctrees/poetry/: README.doctree
_build/.doctrees/scrapy_crawler/: README.doctree
_build/_sources/: index.rst.txt
_build/_sources/scrapy_crawler/: README.rst.txt
_build/docs/: faker_demo.html  faker_demo.tests.html  modules.html
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: faker.doctree  faker.tests.doctree  faker_demo.doctree  faker_demo.tests.doctree  index.doctree  modules.doctree  python.doctree  python.faker_demo.doctree  python.faker_demo.tests.doctree
_build/faker/: README.html
_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/docs/: faker.html  faker.tests.html  faker_demo.html  (+5 more)
_build/poetry/: README.html
_build/scrapy_crawler/: README.html
docs/: faker_demo.rst  modules.rst
python/faker_demo/: Pipfile  README.rst  conftest.py  demo.py
python/poetry_demo/: .coverage  README.rst  pyproject.toml  result.xml
python/poetry_demo/.confidential/: secrets.json
python/poetry_demo/src/poetry_demo/: simple_demo.py  wikipedia.py
python/poetry_demo/tests/: test_poetry.py  test_wikipedia.py
(+34 files in other folders)
