[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = ""
authors = ["Stephen Bell <s0bell@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
confidential = "^2.3.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--junitxml=\"result.xml\""